; ModuleID = '/home/carl/AnghaBench/linux/drivers/char/ipmi/extr_kcs_bmc.c_write_status.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/char/ipmi/extr_kcs_bmc.c_write_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kcs_bmc = type { %struct.TYPE_2__, i32 (%struct.kcs_bmc*, i32, i32)* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.kcs_bmc*, i32)* @write_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_status(%struct.kcs_bmc* %0, i32 %1) #0 {
  %3 = alloca %struct.kcs_bmc*, align 8
  %4 = alloca i32, align 4
  store %struct.kcs_bmc* %0, %struct.kcs_bmc** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.kcs_bmc*, %struct.kcs_bmc** %3, align 8
  %6 = getelementptr inbounds %struct.kcs_bmc, %struct.kcs_bmc* %5, i32 0, i32 1
  %7 = load i32 (%struct.kcs_bmc*, i32, i32)*, i32 (%struct.kcs_bmc*, i32, i32)** %6, align 8
  %8 = load %struct.kcs_bmc*, %struct.kcs_bmc** %3, align 8
  %9 = load %struct.kcs_bmc*, %struct.kcs_bmc** %3, align 8
  %10 = getelementptr inbounds %struct.kcs_bmc, %struct.kcs_bmc* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = load i32, i32* %4, align 4
  %14 = call i32 %7(%struct.kcs_bmc* %8, i32 %12, i32 %13)
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
